--- a/ShibugakiViewer/Views/Resources/Style.xaml
+++ b/ShibugakiViewer/Views/Resources/Style.xaml
@@ -494,4 +494,9 @@
         </Style.Triggers>
     </Style>
     
+    <!-- CheckBox -->
+    <Style TargetType="CheckBox">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+    
 </ResourceDictionary>
