Viewer表示時のインデックス受け渡し修正

--- a/ShibugakiViewer/Views/Controls/TagSelector.xaml
+++ b/ShibugakiViewer/Views/Controls/TagSelector.xaml
@@ -96,7 +96,8 @@
                                     Text="{Binding Name,UpdateSourceTrigger=Default,Mode=TwoWay}"
                                     PreviewKeyDown="TagNameTextBox_PreviewKeyDown" 
                                     IsEnabledChanged="TagNameTextBox_IsEnabledChanged"
-                                    behavior:PlaceHolderBehavior.PlaceHolderControl="{Binding ElementName=nameBoxPlaceHolder}"/>
+                                    behavior:PlaceHolderBehavior.PlaceHolderControl="{Binding ElementName=nameBoxPlaceHolder}"
+                                        Loaded="TagNameTextBox_Loaded"/>
 
                                     <TextBlock
                                         x:Name="nameBoxPlaceHolder"
