--- a/ShibugakiViewer/Views/Controls/TagSelector.xaml
+++ b/ShibugakiViewer/Views/Controls/TagSelector.xaml
@@ -11,8 +11,10 @@
              xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" IsEnabledChanged="UserControl_IsEnabledChanged"
-             PreviewKeyUp="UserControl_PreviewKeyUp">
+             d:DesignHeight="300" d:DesignWidth="300"
+             IsEnabledChanged="UserControl_IsEnabledChanged"
+             PreviewKeyUp="UserControl_PreviewKeyUp"
+             DataContextChanged="UserControl_DataContextChanged">
 
     <UserControl.Resources>
         <converter:ComboBoxPlaceHolderVisibilityConverter x:Key="ComboBoxPlaceHolderVisibilityConverter" />
@@ -26,10 +28,11 @@
         <Grid MaxHeight="450" 
               Margin="8,4"
             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
         <Grid Style="{StaticResource informationPaneButtonGridStyle}" Grid.Row="0"
               Margin="4">
@@ -154,6 +157,29 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+            <Grid Grid.Row="2" Margin="0,4,0,4">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock 
+                    Margin="50,0,4,0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    Text="{StaticResource SortSymbol}"
+                    FontFamily="{StaticResource SymbolFont}"
+                    FontSize="{StaticResource IconFontSize}"/>
+                <ComboBox
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch" Margin="0"
+                    SelectedIndex="{Binding TagSelectorSortMode.Value,Mode=TwoWay}">
+                    <ComboBoxItem
+                        Content="{x:Static properties:Resources.Name}"/>
+                    <ComboBoxItem
+                        Content="{x:Static properties:Resources.LastUsedDate}"/>
+                </ComboBox>
+            </Grid>
     </Grid>
     </Border>
 </UserControl>
