--- a/ShibugakiViewer/Views/Windows/SettingWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/SettingWindow.xaml
@@ -12,6 +12,7 @@
         ResizeMode="CanResizeWithGrip"
         Closed="Window_Closed"
         mc:Ignorable="d"
+        MinWidth="360"
         Title="{x:Static properties:Resources.Options}" Height="590" Width="400">
     <Window.DataContext>
         <viewModels:SettingWindowViewModel/>
